--- a/core/templates/produto.html
+++ b/core/templates/produto.html
@@ -5,6 +5,6 @@
     <title>Produto</title>
 </head>
 <body>
-    <h1>produto</h1>
+    <h1  style="color:blue;text-align:center" > Produto</h1>
 </body>
 </html>
